--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app2.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app3.js",
+    "start": "node app.js",
     "start:dev": "nodemon.server.js"
   },
   "repository": {
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Jaaziel-M/Backend-CoderHouse#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20"
   }
 }
