--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app2.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "start:dev": "nodemon.server.js"
+    "start": "node server.js",
+    "start:dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,10 @@
   "homepage": "https://github.com/Jaaziel-M/Backend-CoderHouse#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "node": "^19.0.0",
+    "nodemon": "^2.0.20",
+    "pug": "^3.0.2"
   }
 }
