--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "node": "^19.0.0",
     "nodemon": "^2.0.20",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "socket.io": "^4.5.3"
   }
 }
