--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "loadsh": "^0.0.4",
     "morgan": "^1.10.0",
     "node": "^19.0.0",
     "nodemon": "^2.0.20",
     "pug": "^3.0.2",
-    "socket.io": "^4.5.3"
+    "socket.io": "^4.5.3",
+    "uuid": "^9.0.0"
   }
 }
