--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "knex": "^2.3.0",
     "loadsh": "^0.0.4",
     "morgan": "^1.10.0",
     "node": "^19.0.0",
