--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "start:dev": "nodemon server.js"
+    "start:dev": "nodemon server.js",
+    "db:setup": "node ./services/create/create.tables.js"
   },
   "repository": {
     "type": "git",
@@ -23,8 +24,8 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "knex": "^2.3.0",
-    "loadsh": "^0.0.4",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "node": "^19.0.0",
     "nodemon": "^2.0.20",
     "pug": "^3.0.2",
