--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-PORT=8080
+PORT1=8080
 PORT2=8081
-SQL_HOST=localhost
-SQL_USER=root
-SQL_DATABASE=websocket
-SQL_PASS=''
+DATASOURCE=Mongo
+MONGO_USER=ludeandoBo
+MONGO_PASS=lSZbB7MLglHRcjnW
