--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "firebase-admin": "^11.3.0",
     "knex": "^2.3.0",
+    "mongoose": "^6.7.5",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "node": "^19.0.0",
