--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT1=8080
 PORT2=8081
-DATASOURCE_PROD=Mongo
-DATASOURCE_KART=Mongo
+DATASOURCE_PROD=Firebase
+DATASOURCE_KART=Firebase
 MONGO_USER=ludeandoBo
 MONGO_PASS=lSZbB7MLglHRcjnW
