--- a/package.json
+++ b/package.json
@@ -23,15 +23,14 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "firebase-admin": "^11.3.0",
-    "knex": "^2.3.0",
-    "mongoose": "^6.7.5",
+    "faker": "^6.6.6",
+    "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
     "node": "^19.0.0",
     "nodemon": "^2.0.20",
-    "pug": "^3.0.2",
+    "normalizr": "^3.6.2",
     "socket.io": "^4.5.3",
+    "utils": "^0.3.1",
     "uuid": "^9.0.0"
   }
 }
