--- a/package.json
+++ b/package.json
@@ -20,17 +20,20 @@
   },
   "homepage": "https://github.com/Jaaziel-M/Backend-CoderHouse#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "faker": "^6.6.6",
+    "express-session": "^1.17.3",
+    "faker": "^5.5.3",
     "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
     "node": "^19.0.0",
     "nodemon": "^2.0.20",
     "normalizr": "^3.6.2",
+    "session-file-store": "^1.5.0",
     "socket.io": "^4.5.3",
-    "utils": "^0.3.1",
+    "utils": "^0.2.2",
     "uuid": "^9.0.0"
   }
 }
