--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "session-file-store": "^1.5.0",
     "socket.io": "^4.5.3",
     "utils": "^0.2.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yargs": "^17.6.2"
   }
 }
