--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "faker": "^5.5.3",
-    "fetch": "^1.1.0",
     "md5": "^2.3.0",
     "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
@@ -36,12 +35,9 @@
     "normalizr": "^3.6.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "pino": "^8.10.0",
-    "pm2": "^5.2.2",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.5.3",
     "utils": "^0.2.2",
-    "uuid": "^9.0.0",
-    "yargs": "^17.6.2"
+    "uuid": "^9.0.0"
   }
 }
