Entrega proyecto final 1

--- a/.env
+++ b/.env
@@ -2,4 +2,6 @@ PORT1=8080
 PORT2=8081
 MONGO_USER=ludeandoBo
 MONGO_PASS=lSZbB7MLglHRcjnW
-COOKIE_SECRET=segurazo
+COOKIE_SECRET=secreto
+MAIL_PASS=fb2f545c12c6212782684dc7f754b050
+MAIL=7835ac4fe6244355869992a4428cd7bd
