--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "faker": "^5.5.3",
     "fetch": "^1.1.0",
     "md5": "^2.3.0",
+    "mocha": "^10.2.0",
     "mongoose": "^6.10.2",
     "morgan": "^1.10.0",
     "node": "^19.6.1",
